--- a/src/pages/Login/login.module.scss
+++ b/src/pages/Login/login.module.scss
@@ -47,6 +47,7 @@
     color: rgb(91, 128, 107);
     font-weight: 500;
     background: rgb(182, 255, 231);
+    box-shadow: none;
 }
 .pass_recover{
     color: #6c757d;
@@ -81,6 +82,9 @@
         box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
         transform: scale(1.05) rotate(-1deg);
     }
+    .login_btn:active {
+        box-shadow: none;
+    }
 }
 .login_footer {
     text-align: center;
@@ -93,4 +97,8 @@
 }
 .register_link:hover {
     color: #6c757d;
+}
+.error {
+    color: red;
+    padding-left: 0.5rem;
 }
