--- a/src/pages/Register/register.module.scss
+++ b/src/pages/Register/register.module.scss
@@ -4,9 +4,11 @@
     display: flex;
 }
 .reg_container1{
-    background-image: url(./Img/main.png);
+    background-image: url(./Img/register.34ba771b.png);
     height: 100vh;
     width: 65%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .reg_container2{
     background-color: rgb(197, 255, 236);
@@ -15,6 +17,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+@media screen and (max-width:800px) {
+    .reg_container1{
+        // display: none;
+        visibility: hidden;
+        width: 0    ;
+    }
+    .reg_container2{
+        width: 100%;
+    }
 }
 .reg_cardbody {
     background-color: rgb(205, 254, 238);
@@ -41,6 +53,7 @@
     color: rgb(91, 128, 107);
     font-weight: 500;
     background: rgb(182, 255, 231);
+    box-shadow: none;
 }
 .reg_btn_container {
     display: flex;
@@ -59,4 +72,11 @@
         border: 0;
         box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
     }
+    .reg_btn:active {
+        box-shadow: none;
+    }
+}.error {
+    padding-left: 0.5rem;
+    font-weight: 500;
+    color: #dc3545!important;
 }
