--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -4,9 +4,9 @@
 }
 
 .main_container {
-  background-color: rgb(182, 250, 228);
   min-width: 100vw;
   min-height: 100vh;
+  background-color: rgb(197, 255, 236);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,27 +15,42 @@
 .login_cardbody {
   background-color: rgb(205, 254, 238);
   padding: 30px;
-  height: 70vh;
+  height: auto;
   border: 1px solid trans;
-  border-radius: 18px;
+  border-radius: 30px;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .login_heading {
   margin: auto;
   margin-top: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.8rem;
   text-align: center;
-  width: 60%;
+  width: 70%;
+  color: #599d65;
+  font-size: inherit;
+}
+.login_heading .login_title {
+  color: #46885e;
+  margin-bottom: 10px;
+  font-size: xx-large;
+}
+
+.login_label {
+  color: #6c757d;
 }
 
 .input {
-  background: rgb(222, 255, 244);
-  color: white;
+  background: rgb(232, 255, 247);
+  border: 0;
+  border-radius: 15px;
 }
 
 .input:focus {
+  color: rgb(91, 128, 107);
+  font-weight: 500;
   background: rgb(182, 255, 231);
+  box-shadow: none;
 }
 
 .pass_recover {
@@ -47,6 +62,10 @@
   font-weight: 500;
 }
 
+.pass_recover:hover {
+  text-shadow: #6c757d;
+}
+
 .login_btn_container {
   display: flex;
   justify-content: center;
@@ -55,4 +74,38 @@
 }
 .login_btn_container .login_btn {
   width: 80%;
+  background-color: #7bffac;
+  color: green;
+  border-radius: 100px;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  border: 0;
+  transition: all 250ms;
+  box-shadow: rgba(44, 187, 99, 0.2) 0 -25px 18px -14px inset, rgba(44, 187, 99, 0.15) 0 1px 2px, rgba(44, 187, 99, 0.15) 0 2px 4px, rgba(44, 187, 99, 0.15) 0 4px 8px, rgba(44, 187, 99, 0.15) 0 8px 16px, rgba(44, 187, 99, 0.15) 0 16px 32px;
+}
+.login_btn_container .login_btn:hover {
+  box-shadow: rgba(44, 187, 99, 0.35) 0 -25px 18px -14px inset, rgba(44, 187, 99, 0.25) 0 1px 2px, rgba(44, 187, 99, 0.25) 0 2px 4px, rgba(44, 187, 99, 0.25) 0 4px 8px, rgba(44, 187, 99, 0.25) 0 8px 16px, rgba(44, 187, 99, 0.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
+}
+.login_btn_container .login_btn:active {
+  box-shadow: none;
+}
+
+.login_footer {
+  text-align: center;
+}
+
+.register_link {
+  text-decoration: none;
+  color: #46885e;
+}
+
+.register_link:hover {
+  color: #6c757d;
+}
+
+.error {
+  color: red;
+  padding-left: 0.5rem;
 }/*# sourceMappingURL=login.module.css.map */
