--- a/src/pages/Register/register.module.css
+++ b/src/pages/Register/register.module.css
@@ -1,4 +1,90 @@
-.h1 {
-  font-size: 14px;
-  color: red;
+.register_container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+
+.reg_container1 {
+  background-image: url(./Img/register.34ba771b.png);
+  height: 100vh;
+  width: 65%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.reg_container2 {
+  background-color: rgb(197, 255, 236);
+  height: 100vh;
+  width: 35%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .reg_container1 {
+    visibility: hidden;
+    width: 0;
+  }
+  .reg_container2 {
+    width: 100%;
+  }
+}
+.reg_cardbody {
+  background-color: rgb(205, 254, 238);
+  padding: 30px;
+  height: auto;
+  border: 1px solid trans;
+  border-radius: 30px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+.reg_title {
+  color: #46885e;
+  margin-bottom: 1.5rem;
+  font-size: xx-large;
+}
+
+.reg_label {
+  color: #6c757d;
+}
+
+.input {
+  background: rgb(232, 255, 247);
+  border: 0;
+  border-radius: 15px;
+}
+
+.input:focus {
+  color: rgb(91, 128, 107);
+  font-weight: 500;
+  background: rgb(182, 255, 231);
+  box-shadow: none;
+}
+
+.reg_btn_container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.reg_btn_container .reg_btn {
+  width: 42%;
+  background-color: #7bffac;
+  color: green;
+  border-radius: 100px;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  border: 0;
+  box-shadow: rgba(44, 187, 99, 0.2) 0 -25px 18px -14px inset, rgba(44, 187, 99, 0.15) 0 1px 2px, rgba(44, 187, 99, 0.15) 0 2px 4px, rgba(44, 187, 99, 0.15) 0 4px 8px, rgba(44, 187, 99, 0.15) 0 8px 16px, rgba(44, 187, 99, 0.15) 0 16px 32px;
+}
+.reg_btn_container .reg_btn:active {
+  box-shadow: none;
+}
+
+.error {
+  padding-left: 0.5rem;
+  font-weight: 500;
+  color: #dc3545 !important;
 }/*# sourceMappingURL=register.module.css.map */
