--- a/src/pages/Todo List/todo.module.scss
+++ b/src/pages/Todo List/todo.module.scss
@@ -7,6 +7,7 @@
 }
 .container{
     margin-top: 2rem;
+    overflow-x: hidden;
 }
 // ------------- Header CSS -------------
 .header {
@@ -16,6 +17,7 @@
    
     .input_form {
         .search_input{
+            display: inline-block;
             max-width: 31vw;
             min-width: fit-content;
             font-size: 1.2rem;
@@ -31,20 +33,21 @@
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
         }
         .search_input:focus {
-            
             color: rgb(65, 65, 65);
             font-weight: 500;
             background: rgb(172, 199, 190);
             box-shadow: none;
         }
-        // .search_label{
-        //     // display: flex;
-        //     // align-items: center;
-        //     position: absolute;
-        //     z-index: 10;
-        //     font-size: 16px;
-        //     left: 395px;
-        //     top: 7px;
+        .search_label{
+            font-size: 1.6rem;
+            font-weight: 500;
+            margin-left: 2rem;
+        }
+        // .search_label:active {
+        //     color: rgb(65, 65, 65);
+        //     font-weight: 500;
+        //     background: rgb(172, 199, 190);
+        //     box-shadow: none;
         // }
     }
 }
@@ -88,8 +91,9 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border: 0;
     border-radius: 10px;
-    max-height: 80vh;
+    max-height: 75vh;
     overflow-y: scroll;
+    overflow-x: hidden;
     .card_component {
         margin: 0.5rem;
     }
@@ -108,33 +112,38 @@
         display: flex;
         justify-content: space-between;
     }
-    .list_title {
-        width: 74%;
-    }
+    
 }
 
 .dis_container {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    .btn_delete_conatiner {
-        display: flex;
-        justify-content: space-between;   
+    .list_title {
+        width: 75%;
+        font-weight: 500;
+        color: #333;
     }
-    .btn_delete {
-        margin-left: 2px;
-        padding: 0;
-        font-size: 25px;
-        // background-color: #905043;
-        // border: 0;
-        color: red;
-    }
-    .edit_btn{
-        padding: 2px;
-        font-size: 25px;
-        // background-color: #5ae368;
-        // border: 0;
-        color: #dedede;
-    }
+        .btn_delete_conatiner {
+            width: 20%;
+            .edit_btn{
+                padding: 2px;
+                font-size: 25px;
+                // background-color: #5ae368;
+                // border: 0;
+                color: #dedede;
+            }
+            .btn_delete {
+                margin-top: 2px;
+                margin-left: 2px;
+                padding: 0;
+                font-size: 26px;
+                // background-color: #905043;
+                // border: 0;
+                color: red;
+            }
+        }
+    
 }
 
 
