--- a/src/pages/Register/register.module.scss
+++ b/src/pages/Register/register.module.scss
@@ -76,6 +76,7 @@
         box-shadow: none;
     }
 }.error {
+    font-size: small;
     padding-left: 0.5rem;
     font-weight: 500;
     color: #dc3545!important;
